# Physical-AI-Humanoid-Robotics-Textbook

./: .gitignore  DEPLOYMENT.md  ENV_SETUP.md  README.md  dummy.ipynb  package-lock.json  package.json  ragg_chatbot_readme.md  summary_conversations.md  tsconfig.json
.claude/agents/: auth-personalizer.md  context7-docs-analyst.md  deploy-commander.md  docusaurus-book-creator.md  frontend-architect.md  physical-ai-book-master.md  rag-spec-architect.md
docs/: agent_usage.md
docusaurus/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
fastapi/: .env.example  .env.setup  debug_qdrant.py  main.py  pyproject.toml  requirements.txt  test_gemini.py  test_imports.py  test_qdrant_connection.py  test_rag.py  test_rag_fallback.py
fastapi/app/: auth.py  main.py  models.py  qdrant_client.py
fastapi/app/api/: api.py  auth.py  chat.py  deps.py
fastapi/app/api/endpoints/: chat.py  personalize.py  translate.py  user.py
fastapi/app/core/: config.py  db.py
fastapi/app/models/: chat.py  personalize.py  translate.py  user.py
fastapi/app/services/: chat_service.py  chatbot_service.py  conversation_service.py  openai_service.py  personalize_service.py  qdrant_client.py  qdrant_service.py  retrieval_service.py  translate_service.py  user_service.py
fastapi/migrations/: 001_create_users.sql  002_create_chat.sql  003_create_personalization.sql  004_create_agent_logs.sql
fastapi/scripts/: ingest.py  ingest_data.py  init_db.py
nextjs/: components.json  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.js
nextjs/app/: page.tsx  (+2 more)
(+93 files in other folders)
